feat: launch MHED loadout platform
